--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,91 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<section>
+  <div class="banner" style="background-image: url(/assets/banner1.jpg);">
+    <div class="container-text-hp">
+      <h1>Jij bent de arts van de toekomst</h1>
+      <p>Wij bieden de opleiding van de toekomst</p>
+    </div>
+  </div>
+</section>
+
+<section>
+<div class="container">
+  <div class="row">
+    <div class="paragraph1">
+    <p> <strong> MedicalVR levert onderwijs toepassingen voor medische studenten en artsen in opleiding. </strong></p>
+  </div>
+    <div class="paragraph2">
+    <p>Virtual Reality (VR) training laat studenten leren en trainen in een virtuele omgeving. De virtuele omgeving geeft 3D-modellen van de anatomische structuur van patienten weer. De vernieuwende manier van interactieve lessen geven laat studenten de materie beter begrijpen en sneller toepassen in de werkelijkheid. Bovendien kunnen studenten individueel voorbereiden op een les. </p>
+    </div>
+    <div>
+    <%= link_to "Meer informatie", root_path, class: "link2" %>
+    </div>
+  </div>
+
+  <ul class="list-inline tabs-underlined">
+  <li>
+    <a href="#" class="tab-underlined">Waarom wij?</a>
+  </li>
+  <li>
+    <a href="#" class="tab-underlined">Samenwerking op</a>
+  </li>
+  <li>
+    <a href="#contact" class="tab-underlined">Contact</a>
+  </li>
+</ul>
+
+</div>
+</section>
+
+<section>
+  <div class="container">
+    <!-- Begin Mailchimp Signup Form -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+    <div id="mc_embed_signup">
+    <form action="https://gmail.us20.list-manage.com/subscribe/post?u=82ff8df0fba3c358b635eece3&amp;id=ddae197350" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+      <h2>Subscribe</h2>
+    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+    <div class="mc-field-group">
+      <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+    </label>
+      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+    </div>
+    <div class="mc-field-group">
+      <label for="mce-FNAME">First Name </label>
+      <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+    </div>
+    <div class="mc-field-group">
+      <label for="mce-LNAME">Last Name </label>
+      <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+    </div>
+    <div class="mc-field-group size1of2">
+      <label for="mce-BIRTHDAY-month">Birthday </label>
+      <div class="datefield">
+        <span class="subfield monthfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month"></span> /
+        <span class="subfield dayfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day"></span>
+        <span class="small-meta nowrap">( mm / dd )</span>
+      </div>
+    </div>  <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_82ff8df0fba3c358b635eece3_ddae197350" tabindex="-1" value=""></div>
+        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+    </form>
+    </div>
+    <!--End mc_embed_signup-->
+  </div>
+</section>
+
+
+<section id="contact">
+  contact info
+</section>
+
+
