--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <section>
-  <div class="banner" style="background-image: url(/assets/banner1.jpg);">
+  <div class="banner" style="background-image: url(<%=image_url "banner1.jpg"%>);">
     <div class="container-text-hp">
       <h1>Jij bent de arts van de toekomst</h1>
       <p>Wij bieden de opleiding van de toekomst</p>
