--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -22,13 +22,14 @@
 }
 
 .container-text-hp {
-   margin-top: 255px;
-   margin-left: 32px;
+ margin-top: 255px;
+ margin-left: 32px;
 }
 
 .paragraph1 {
   margin-top: 35px;
   margin-left: 10px;
+  color: #EB4F34;
 }
 
 .paragraph2 {
@@ -36,10 +37,23 @@
   margin-left: 10px;
 }
 
+.paragraph3 {
+  color: #EB4F34;
+  font-size: 64px;
+  font-weight: bold;
+}
+
+.paragraph4 {
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+
 .link2 {
   margin-top: 10px;
   color: #266EF1;
-  font-size: 38px;
+  font-size: 18px;
   margin-bottom: 20px;
   margin-left: 10px;
 
