--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to "#", class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
@@ -5,4 +6,5 @@
 
 
     <button type="button" class="btn btn-primary">AANMELDEN ALS OPLEIDINGSINSTITUUT</button>
+</div>
 </div>
