--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to "#", class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
@@ -8,3 +8,4 @@
     <button type="button" class="btn btn-primary">AANMELDEN ALS OPLEIDINGSINSTITUUT</button>
 </div>
 </div>
+ -->
