--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,14 @@
-<!-- <div class="container">
+<div class="container">
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to "#", class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
     <% end %>
 
+  <div>
+    <button type="button" class="btn btn-link">Our Solutions <i class="fas fa-sort-down fa-2x"></i></button>
+    <button type="button" class="btn btn-link">Insights</button>
+    <button type="button" class="btn btn-link">Contact</button>
+</div>
 
-    <button type="button" class="btn btn-primary">AANMELDEN ALS OPLEIDINGSINSTITUUT</button>
 </div>
 </div>
- -->
