--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Barlow:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Barlow:400,700|Montserrat:400,700&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Barlow", "Helvetica", "sans-serif";
-$headers-font: "Barlow", "Helvetica", "sans-serif";
+$body-font: "Barlow", "Montserrat", "sans-serif";
+$headers-font: "Barlow", "Montserrat", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
