--- a/app/views/pages/construction.html.erb
+++ b/app/views/pages/construction.html.erb
@@ -1,1 +1,10 @@
-construction.html.erb
+<div class="container">
+  <section>
+    <h1>
+      <br>
+      <i class="fas fa-tools"></i> Website is under construction <i class="fas fa-tools"></i>
+      <br>
+      <br>
+    Feel free to mail questions to: chris@medicalvr.eu </h1>
+  </div>
+</section>
