--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -58,3 +58,178 @@
   margin-left: 10px;
 
 }
+
+.form-wrapper-delegate {
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(1,1,1,0.3);
+  color:#7C7A7A;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  margin: 50px 0;
+}
+.padded-box{
+  padding: 25px;
+}
+.form-container-delegate {
+  padding: 25px;
+  position: relative;
+  word-break: break-all;
+}
+
+.form-header-delegate {
+  display: flex;
+}
+
+.line-delegate {
+  border-bottom: 2px solid #2C89B1;
+  flex-grow: 1;
+  padding-top:1px ;
+}
+
+.form-body-delegate {
+  margin-top: 20px;
+}
+
+.form-title-delegate {
+  margin:0;
+}
+
+.form-wrapper-delegate h2 {
+  color:#2C89B1;
+}
+
+.nameinput-delegate {
+  display:flex;
+  justify-content:space-between;
+  align-items: center;
+  input {
+   display: inline;
+ }
+}
+.card-delegate {
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  position:relative;
+  margin: 20px -10px;
+  height: 100px;
+}
+
+.delegates-card-container {
+  margin-top: 50px;
+}
+
+.card-delegate h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  color:#2C89B1;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  padding-left: 20px
+}
+
+.card-delegate p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+  color:#7C7A7A;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.card-delegate .card-delegate-infos {
+  padding: 16px;
+}
+.card-delete-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #7C7A7A;
+  font-weight: 600;
+  &:hover {
+  filter: brightness(92%);
+  text-decoration: none;
+  }
+}
+.card-update-button {
+  top: 10px;
+  right: 10px;
+  color: #7C7A7A;
+  font-weight: 500;
+  position: relative;
+  margin-bottom: -45px;
+  margin-right: -7px;
+  &:hover {
+  filter: brightness(92%);
+  text-decoration: none;
+  }
+}
+.get-started-button-delegate {
+  width: 150px;
+  height: 50px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  // font-weight: bold;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color:#2C89B1;
+  border-radius: 25px;
+}
+
+.get-started-button-delegate:hover{
+  filter: brightness(92%);
+  text-decoration: none;
+  }
+
+.head-delegate {
+      font-weight: bold;
+    font-size: 40px;
+    line-height: 49px;
+    color: #2C89B1;
+    padding-bottom: 20px;
+}
+
+.head-delegate h4 {
+    font-size: 24px;
+    line-height: 33px;
+    color: #7C7A7A;
+    margin-bottom: 0;
+    margin-top: 0px;
+}
+.dashboard-button-delegate {
+  // width: 200px;
+  // height: 300px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  // font-weight: bold;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color:#2C89B1;
+  border-radius: 25px;
+  padding: 15px;
+  margin-bottom: 30px;
+  // margin-top: 20px;
+  margin-left: 25px;
+}
+.dashboard-button-delegate:hover {
+  filter: brightness(92%);
+  text-decoration: none;
+  color: white;
+}
+.dashboard-button-edit {
+  margin-top: -10px;
+}
+
+
