--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,69 +1,23 @@
-<div class="container">
-  <section>
-    <div class="banner" style="background-image: url(<%=image_url "banner1.jpg"%>);">
-      <div class="container-text-hp">
-        <h1>Jij bent de arts van de toekomst</h1>
-        <p>Wij bieden de opleiding van de toekomst</p>
-      </div>
-    </div>
-  </section>
+<section class="section-hp">
 
-  <section>
-    <div class="row">
-      <div class="paragraph1">
-        <p> <strong> MedicalVR levert onderwijs toepassingen voor medische studenten en artsen in opleiding. </strong></p>
-      </div>
-      <div class="paragraph2">
-        <p>Virtual Reality (VR) training laat studenten leren en trainen in een virtuele omgeving. De virtuele omgeving geeft 3D-modellen van de anatomische structuur van patienten weer. De vernieuwende manier van interactieve lessen geven laat studenten de materie beter begrijpen en sneller toepassen in de werkelijkheid. Bovendien kunnen studenten individueel voorbereiden op een les. </p>
-      </div>
-      <div>
-        <%= link_to "Meer informatie", href="#contact", class: "link2" %>
-      </div>
-    </div>
-  </section>
+  <div class="section-item-left" id="banner-hp">
+    <h1>
+      Lighting Your Way
+    </h1>
+    <p>
+      Learn about funeral planning options and to-dos <br>
+      Connect with the right providers for your needs <br>
+      Easily share information with friends and family
+    </p>
+    <% if current_user %>
+    <%= button_to "GET STARTED", dashboard_path, class: "get-started-button btn-margin-top", method: "get" %>
+    <% else %>
+    <%= button_to "GET STARTED", new_user_session_path, class: "get-started-button btn-margin-top", method: "get" %>
+    <% end %>
+  </div>
 
-  <section>
-    <ul class="list-inline tabs-underlined">
-      <li>
-        <a href="#" class="tab-underlined">Waarom wij?</a>
-      </li>
-      <li>
-        <a href="#" class="tab-underlined">Samenwerking op</a>
-      </li>
-      <li>
-        <a href="/subscribe" class="tab-underlined">Contact</a>
-      </li>
-    </ul>
-  </section>
+  <div>
+    <%= image_tag "banner1.jpg", class: "img-hp-right1" %>
+  </div>
 
-  <section>
-    <div class="row">
-      <div class="paragraph1">
-        <p> <strong> Jouw ontwikkeng staat bij ons centraal </strong>
-        </div>
-        <div class="paragraph2">
-          <p> Vernieuwende technologien als virtual en augmented reality kunnen anatomie studenten sneller het lichaam van de patient laten begrijpen.
-            <br>
-            <br>  Wij zijn op zoek naar opleidingsinstituten die willen samenwerken om te onderzoeken hoe deze technieken de studenten de patienten beter te laten begrijpen ten opzichten van klassieke anatomie les.
-          </div>
-          <div>
-            <%= link_to "Meld je hier aan als onderzoeksinstituut", subscribe_path , class: "link2" %>
-          </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="row">
-      <div class="paragraph3">
-        <h1>Waarom wij?</h1>
-          <div class="paragraph4">
-            <i class="fas fa-pencil-alt"></i>  <strong> Creeeren op maat gemaakt lesmateriaal
-          </div>
-            <div class="paragraph4">
-              <i class="fas fa-pencil-alt"></i>  <strong> Creeeren op maat gemaakt lesmateriaal
-            </div>    <div class="paragraph4">
-              <i class="fas fa-pencil-alt"></i>  <strong> Creeeren op maat gemaakt lesmateriaal
-            </div>    <div class="paragraph4">
-              <i class="fas fa-pencil-alt"></i>  <strong> Creeeren op maat gemaakt lesmateriaal
-            </div>
-  </section>
+</section>
