--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,8 +30,17 @@ so you can <span class="red-text"> focus </span> on the big picture (H2)</h2>
     <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
   </div>
 </div>
+</div>
 </section>
 
+<section class="sectionsecond">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+      <h1> Building A Digital Workforce </h1>
+    </div>
+  </div>
+</section>
 <!--
 
 
