--- a/app/assets/stylesheets/components/_landings.scss
+++ b/app/assets/stylesheets/components/_landings.scss
@@ -36,7 +36,7 @@
 }
 
 .red-text {
-  color: #FF0000;
+  color: #EB4F34;
 }
 
 .row-1 {
@@ -55,6 +55,7 @@
   justify-content: center;
   align-items: left;
   margin-top: 20px;
+  margin-bottom: 50px;
 
   p {
   margin-bottom: 30px;
@@ -62,3 +63,5 @@
   font-size: 18px;
   }
 }
+
+
