--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,3 +16,22 @@
   // background-color: black;
   filter: brightness(92%);
 }
+
+.button-explore{
+  height: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 32px;
+  text-align: center;
+  color: #EB4F34;
+  background-color: white;
+  border-radius: 5px;
+  padding: 3px 2pc;
+  margin-left: 10px;
+  }
+
+.button-explore:hover{
+  // background-color: black;
+  filter: brightness(92%);
+}
