--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,11 +36,23 @@ so you can <span class="red-text"> focus </span> on the big picture (H2)</h2>
 <section class="sectionsecond">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8">
       <h1> Building A Digital Workforce </h1>
+      <h5> It’s a Puzzle – And We’re Experts in Each Piece (H5) </h5>
+      <p> The digital workforces we deploy for our clients are custom-built using a variety of interrelated technologies. Ciphix carefully selects from the best RPA and AI tools on the market in order to adapt our solutions to your precise needs. (P) </p>
+      <div>
+      <button type="button" class="button-start"> Develop VR </button>
+      <button type="button" class="button-explore"> Educate Your Students </button>
+      </div>
+      </div>
+        <div class="col-md-4">
+          <%= image_tag "banner1.jpg", class: "image-1" %>
+        </div>
+      </div>
     </div>
-  </div>
 </section>
+
+
 <!--
 
 
