--- a/app/assets/stylesheets/components/_secondlanding.scss
+++ b/app/assets/stylesheets/components/_secondlanding.scss
@@ -1,4 +1,31 @@
 .sectionsecond {
   background-color: #F9FBFF;
   padding-top: 100px;
+  padding-bottom: 100px;
+
+  h1{
+    font-weight: bold;
+    font-size: 54px;
+  }
+
+  h3 {
+    color: #A6A6A6;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-weight: bold;
+  }
+
+  h5 {
+    color: #EB4F34;
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-weight: bold;
+  }
+
+  p {
+    margin-bottom: 30px;
+    line-height: 30px;
+    font-size: 18px;
+  }
 }
