--- a/app/assets/stylesheets/components/_landings.scss
+++ b/app/assets/stylesheets/components/_landings.scss
@@ -48,6 +48,12 @@
   font-weight: bold;
   font-size: 40px;
   }
+
+  p {
+  margin-bottom: 30px;
+  line-height: 30px;
+  font-size: 18px;
+  }
 }
 
 .container-text {
