--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <section class="section">
   <div class="container">
     <div class="row first">
-      <div class="col-lg-6">
+      <div class="col-sm-8 col-lg-8 col-12">
         <h1>Take the robot out of the human (H1) </h1>
         <h3>Through our intelligent automation(H3) </h3>
         <p>Free your teams to do what they do best by offloading repetitive manual tasks to a digital workforce of AI-powered software robots. (P)</p>
         <button type="button" class="button-start"> Explore </button>
       </div>
-    <div class="col-lg-6">
+    <div class="col-sm-4 col-lg-4 col-12">
       <%= image_tag "banner1.jpg", class: "image-1" %>
     </div>
   </div>
@@ -17,16 +17,16 @@
 <section class="section">
   <div class="container">
     <div class="row-1">
-      <div class="col-lg-g">
+      <div class="col-10">
       <h2> We focus on building <span class="red-text"> sustainable </span> solutions <br>
 so you can <span class="red-text"> focus </span> on the big picture (H2)</h2>
       </div>
     </div>
     <div class="container-text">
-  <div class="col-sm-4">
+  <div class="col-sm-4 col-lg-4 col-8">
     <p> Ciphix implements sustainable Robotic Process Automation (RPA) solutions that reduce time and costs while meaningfully enhancing employee experience. </p>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-4 col-lg-4 col-8">
     <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
   </div>
 </div>
@@ -79,4 +79,14 @@ so you can <span class="red-text"> focus </span> on the big picture (H2)</h2>
   </div>
 </div>
 </section>
+
+<div class="footer">
+  <div class="footer-links">
+    <div>
+    <button type="button" class="btn btn-link">Our Solutions <i class="fas fa-sort-down fa-2x"></i></button>
+    <button type="button" class="btn btn-link">Insights</button>
+    <button type="button" class="btn btn-link">Contact</button>
+  </div>
+  </div>
+</div>
 
