--- a/app/assets/stylesheets/components/_landings.scss
+++ b/app/assets/stylesheets/components/_landings.scss
@@ -13,7 +13,7 @@
 }
 
 .first {
-  height: 60vh;
+  min-height: 60vh;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -39,6 +39,15 @@
   }
 }
 
+@media (max-width: 800px) {
+    .first {
+      margin-bottom: 40px;
+      margin-top: 10px;
+    h1{
+      font-size: 40px;
+    }
+    }
+}
 .red-text {
   color: #EB4F34;
 }
@@ -51,7 +60,7 @@
   text-align: center;
   h2 {
   font-weight: bold;
-  font-size: 40px;
+  font-size: 39px;
   }
 
   p {
