--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,88 +5,83 @@
         <h1>Take the robot out of the human (H1) </h1>
         <h3>Through our intelligent automation(H3) </h3>
         <p>Free your teams to do what they do best by offloading repetitive manual tasks to a digital workforce of AI-powered software robots. (P)</p>
-        <button type="button" class="button-start"> Explore </button>
+        <button type="button" class="btn-brand btn-start"> Request a demo </button>
       </div>
-    <div class="col-sm-4 col-lg-4 col-12">
-      <%= image_tag "banner1.jpg", class: "image-1" %>
+      <div class="col-sm-4 col-lg-4 col-12 topbanner">
+        <%= image_tag "banner1.jpg", class: "image-1" %>
+      </div>
     </div>
   </div>
-</div>
 </section>
 
 <section class="section">
   <div class="container">
     <div class="row-1">
       <div class="col-10">
-      <h2> We focus on building <span class="red-text"> sustainable </span> solutions <br>
-so you can <span class="red-text"> focus </span> on the big picture (H2)</h2>
+        <h2> We focus on building <span class="red-text"> sustainable </span> solutions
+          so you can <span class="red-text"> focus </span> on the big picture (H2)</h2>
+        </div>
+      </div>
+      <div class="container-text">
+        <div class="row">
+          <div class="col-sm-6 col-12">
+            <p> Ciphix implements sustainable Robotic Process Automation (RPA) solutions that reduce time and costs while meaningfully enhancing employee experience. </p>
+          </div>
+          <div class="col-sm-6 col-12">
+            <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="container-text">
-  <div class="col-sm-4 col-lg-4 col-8">
-    <p> Ciphix implements sustainable Robotic Process Automation (RPA) solutions that reduce time and costs while meaningfully enhancing employee experience. </p>
-  </div>
-  <div class="col-sm-4 col-lg-4 col-8">
-    <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
-  </div>
-</div>
-</div>
-</section>
+  </section>
 
-<section class="sectionsecond">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-      <h1> Building A Digital Workforce </h1>
-      <h5> It’s a Puzzle – And We’re Experts in Each Piece (H5) </h5>
-      <p> The digital workforces we deploy for our clients are custom-built using a variety of interrelated technologies. Ciphix carefully selects from the best RPA and AI tools on the market in order to adapt our solutions to your precise needs. (P) </p>
-      <div>
-      <button type="button" class="button-start"> Develop VR </button>
-      <button type="button" class="button-explore"> Educate Your Students </button>
-      </div>
-      </div>
+  <section class="sectionsecond">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <h1> Building A Digital Workforce </h1>
+          <h5> It’s a Puzzle – And We’re Experts in Each Piece (H5) </h5>
+          <p> The digital workforces we deploy for our clients are custom-built using a variety of interrelated technologies. Ciphix carefully selects from the best RPA and AI tools on the market in order to adapt our solutions to your precise needs. (P) </p>
+          <div>
+            <button type="button" class="btn-brand"> Develop VR </button>
+            <button type="button" class="btn-explore"> Educate Your Students </button>
+          </div>
+        </div>
         <div class="col-md-4">
           <%= image_tag "banner1.jpg", class: "image-1" %>
         </div>
       </div>
     </div>
-</section>
+  </section>
 
-<section class="sectionthree">
-  <div class="container">
-    <div class="row-1">
-      <div class="col-lg-g">
-        <h1> The Benefits (H1) </h1>
-        <p> Focus on strategy and let your custom-created robots sweat the details. </p>
+  <section class="sectionthree">
+    <div class="container">
+      <div class="row-1">
+        <div class="col-lg-g">
+          <h1> The Benefits (H1) </h1>
+          <p> Focus on strategy and let your custom-created robots sweat the details. </p>
+        </div>
+      </div>
+      <div class="container-three">
+        <div class="row">
+          <div class="col-sm-4 col-12 ">
+            <%= image_tag "img-plan.png", class: "item-illustration-img" %>
+            <h2>Advantage 1</h2>
+            <p> Ciphix implements sustainable Robotic Process Automation (RPA) solutions that reduce time and costs while meaningfully enhancing employee experience. </p>
+          </div>
+          <div class="col-sm-4 col-12">
+            <%= image_tag "img-manage.png", class: "item-illustration-img" %>
+            <h2> Advantage 2 </h2>
+            <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
+          </div>
+          <div class="col-sm-4 col-12">
+            <%= image_tag "img-track.png", class: "item-illustration-img" %>
+            <h2> Advantage 3 </h2>
+            <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="container-three">
-  <div class="col-sm-3 ">
-    <%= image_tag "img-plan.png", class: "item-illustration-img" %>
-    <h2>Advantage 1</h2>
-    <p> Ciphix implements sustainable Robotic Process Automation (RPA) solutions that reduce time and costs while meaningfully enhancing employee experience. </p>
-  </div>
-  <div class="col-sm-3">
-    <%= image_tag "img-manage.png", class: "item-illustration-img" %>
-    <h2> Advantage 2 </h2>
-    <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
-  </div>
-    <div class="col-sm-3">
-      <%= image_tag "img-track.png", class: "item-illustration-img" %>
-      <h2> Advantage 3 </h2>
-    <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
-  </div>
-  </div>
-</div>
-</section>
+  </section>
 
-<div class="footer">
-  <div class="footer-links">
-    <div>
-    <button type="button" class="btn btn-link">Our Solutions <i class="fas fa-sort-down fa-2x"></i></button>
-    <button type="button" class="btn btn-link">Insights</button>
-    <button type="button" class="btn btn-link">Contact</button>
-  </div>
-  </div>
-</div>
 
