--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,9 +4,7 @@
     <%= image_tag "logo.png" %>
     <% end %>
 
-  <div>
-    <button type="button" class="btn btn-link">Our Solutions <i class="fas fa-sort-down fa-2x"></i></button>
-    <button type="button" class="btn btn-link">Insights</button>
+  <div class="d-none d-sm-block">
     <button type="button" class="btn btn-link">Contact</button>
 </div>
 </div>
