updated text and images

--- a/app/assets/stylesheets/components/_secondlanding.scss
+++ b/app/assets/stylesheets/components/_secondlanding.scss
@@ -73,7 +73,20 @@
   height: 154px;
   margin-bottom: 20px;
   margin-top: 12px;
-
 }
+
+.item-illustration-img-2{
+  width: 55%;
+  height: 154px;
+  margin-bottom: 20px;
+  margin-top: 12px;
+}
+.item-illustration-img-3{
+  width: 55%;
+  height: 154px;
+  margin-bottom: 20px;
+  margin-top: 12px;
+}
+
 }
 
