--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,13 +2,13 @@
   <div class="container">
     <div class="row first">
       <div class="col-sm-8 col-lg-8 col-12">
-        <h1>Take the robot out of the human (H1) </h1>
-        <h3>Through our intelligent automation(H3) </h3>
-        <p>Free your teams to do what they do best by offloading repetitive manual tasks to a digital workforce of AI-powered software robots. (P)</p>
+        <h1>Enabling students to better understand anatomy </h1>
+        <h3>Through our Virtual Reality solutions  </h3>
+        <p>Medical students consider anatomy as one of the most difficult studies to wrap their head around. By providing anatomy classes in virtual reality, we support students to master the understanding of a human’s anatomy.</p>
         <button type="button" class="btn-brand btn-start"> Request a demo </button>
       </div>
       <div class="col-sm-4 col-lg-4 col-12 topbanner">
-        <%= image_tag "banner1.jpg", class: "image-1" %>
+        <%= image_tag "homepage1.png", class: "image-1" %>
       </div>
     </div>
   </div>
@@ -18,17 +18,16 @@
   <div class="container">
     <div class="row-1">
       <div class="col-10">
-        <h2> We focus on building <span class="red-text"> sustainable </span> solutions
-          so you can <span class="red-text"> focus </span> on the big picture (H2)</h2>
+        <h2> We focus on building <span class="red-text"> simplifying </span> complex anatomy so you can <span class="red-text"> focus </span> on the bigger picture</h2>
         </div>
       </div>
       <div class="container-text">
         <div class="row">
           <div class="col-sm-6 col-12">
-            <p> Ciphix implements sustainable Robotic Process Automation (RPA) solutions that reduce time and costs while meaningfully enhancing employee experience. </p>
+            <p> MedicalVR combines 3D-models of the human anatomy and advanced Virtual Reality visualization techniques. Our solution is an addition to the current medicine curriculum where students get taught during classes, from the anatomy books and in the dissection room. </p>
           </div>
           <div class="col-sm-6 col-12">
-            <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
+            <p>Through the many interviews we have conducted with medicine students we found out that students find it difficult to learn how anatomic structures are built. Images in the books and classes are simply flat. In real-life they are three-dimensional. Our tool allows the students to visualize a anatomic structure in 3-D and give them a 3D-mental representation. </p>
           </div>
         </div>
       </div>
@@ -39,16 +38,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h1> Building A Digital Workforce </h1>
-          <h5> It’s a Puzzle – And We’re Experts in Each Piece (H5) </h5>
-          <p> The digital workforces we deploy for our clients are custom-built using a variety of interrelated technologies. Ciphix carefully selects from the best RPA and AI tools on the market in order to adapt our solutions to your precise needs. (P) </p>
+          <h1> Educating Next Generation’s Doctors </h1>
+          <h5> It’s a Puzzle – And We Help Students Put The Pieces </h5>
+          <p> The Virtual Reality programs we develop are custom-built satisfying the didactical needs and requirements from the university or hospital. The VR Classes range from general anatomy classes to tailor-made trainings for medical specialists. MedicalVR assembles classes based on the desired curriculum in order to adapt our solutions to your precise learnings needs. </p>
           <div>
             <button type="button" class="btn-brand"> Develop VR </button>
             <button type="button" class="btn-explore"> Educate Your Students </button>
           </div>
         </div>
         <div class="col-md-4">
-          <%= image_tag "banner1.jpg", class: "image-1" %>
+          <%= image_tag "homepage2", class: "image-1" %>
         </div>
       </div>
     </div>
@@ -58,26 +57,26 @@
     <div class="container">
       <div class="row-1">
         <div class="col-lg-g">
-          <h1> The Benefits (H1) </h1>
-          <p> Focus on strategy and let your custom-created robots sweat the details. </p>
+          <h1> The Benefits </h1>
+          <p> Focus on teaching and let your custom-created VR teaching tools take the students to a higher level.  </p>
         </div>
       </div>
       <div class="container-three">
         <div class="row">
           <div class="col-sm-4 col-12 ">
-            <%= image_tag "img-plan.png", class: "item-illustration-img" %>
-            <h2>Advantage 1</h2>
-            <p> Ciphix implements sustainable Robotic Process Automation (RPA) solutions that reduce time and costs while meaningfully enhancing employee experience. </p>
+            <%= image_tag "icon.png", class: "item-illustration-img-3" %>
+            <h2> Reduce Costs </h2>
+            <p> Virtual Reality training allows students to dedicate time and effort to learn a skill set in a virtual enivornment. The simulated environment is a representation of the real world providing the opportunity to reach a higher level before they have to perform a procedure in the real world. </p>
           </div>
           <div class="col-sm-4 col-12">
-            <%= image_tag "img-manage.png", class: "item-illustration-img" %>
-            <h2> Advantage 2 </h2>
-            <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
+            <%= image_tag "hp3.png", class: "item-illustration-img-2" %>
+            <h2> Interactive Learning </h2>
+            <p>Instead of typically learning from the books or slides the Virtual enviroment offer models with which the students can interact. Students can pick a specific module and practise elements, review the anatomy and learn in a fun interactive way.</p>
           </div>
           <div class="col-sm-4 col-12">
-            <%= image_tag "img-track.png", class: "item-illustration-img" %>
-            <h2> Advantage 3 </h2>
-            <p>With Artificial Intelligence (AI) serving as a problem-solving “brain,” the robots we deploy can automate a wide range of tasks with stunning efficiency—giving humans more time to be human.</p>
+            <%= image_tag "repeat.png", class: "item-illustration-img-2" %>
+            <h2> Repetitive Learning </h2>
+            <p>By practising in the Virtual environment, students can perform a specific exercise. They have the ability to redo it until they have completed it or gained a sufficient level to complete a task with full confidence.</p>
           </div>
         </div>
       </div>
