--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -1,13 +1,38 @@
-.contactform {
-  background-color: #F4F4F4;
-  color: gray;
-  padding: 20px 0px;
-  font: timesn
-}
-
 .fullbox {
   background-color: #F4F4F4;
+  font-size: 24px;
+  margin-top: -20px;
+  }
+
+.contactform {
+  background-color: #F4F4F4;
+  padding: 10px 0px;
+  color: #EB4F34;
+  font-family: Montserrat;
+  font-size: 16px;
+  height: 100px;
+}
+
+.plussize {
+  height: 100px;
 }
 
 
+.sendbtn{
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 32px;
+  text-align: center;
+  color: white;
+  // background-color: #EB4F34;
+  border-radius: 5px;
+  padding: 3px 2pc;
+  border: 0;
+}
+
+.btn-brand:hover{
+  // background-color: black;
+  filter: brightness(92%);
+}
 
