--- a/app/assets/stylesheets/components/_landings.scss
+++ b/app/assets/stylesheets/components/_landings.scss
@@ -9,7 +9,6 @@
   position: relative;
   overflow: auto;
   box-sizing: border-box;
-
 }
 
 .first {
@@ -44,10 +43,14 @@
       margin-bottom: 40px;
       margin-top: 10px;
     h1{
-      font-size: 40px;
+      font-size: 28px;
     }
+    h3{
+      font-size: 24px;
     }
 }
+}
+
 .red-text {
   color: #EB4F34;
 }
@@ -68,6 +71,13 @@
   line-height: 30px;
   font-size: 18px;
   }
+
+@media (max-width: 800px) {
+  .row-1
+  h1 {
+  font-size: 28px;
+  }
+}
 }
 
 .container-text {
@@ -83,5 +93,17 @@
   font-size: 18px;
   }
 }
+
+@media (max-width: 800px) {
+.topbanner {
+  order: -1;
+  margin-left:53px;
+  margin-bottom: 20px;
+}
+}
+
+
+
+
 
 
