--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
     <% end %>
 
   <div class="d-none d-sm-block">
-    <button type="button" class="btn btn-link">Contact</button>
+  <%= link_to "Contact", subscribe_path, class: "btn btn-link" %>
 </div>
 </div>
 </div>
